--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -212,16 +212,9 @@
 
 
 @code {
-    IbisChannel? Channel;
-    
-    protected override async Task OnInitializedAsync()
-    {
-        Channel = await Ibis.GetAllAsync("sparc");
-    }
-
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        //if (System.Globalization.CultureInfo.CurrentCulture.TwoLetterISOLanguageName != "en")
-        var result = await JSRuntime.InvokeAsync<List<string>>("ibis.getTextNodes");
+        if (firstRender)
+            await Ibis.TranslatePageAsync("sparc-landing-page");
     }
 }
