--- a/SparcWeb/wwwroot/css/app.css
+++ b/SparcWeb/wwwroot/css/app.css
@@ -756,6 +756,11 @@ nav .nav-mobile {
                 }
             }
 */
+body.ibis-translating {
+  visibility: hidden;
+  opacity: 0;
+}
+
 .homepage .center {
   text-align: center;
 }
@@ -790,6 +795,7 @@ nav .nav-mobile {
   font-family: "NeueHaasDisplayMedium";
   color: #F2EDDF;
   -webkit-text-stroke: 2px #111321;
+  margin: 0 12px;
 }
 .homepage .hero-graphic {
   display: block;
